chore: prepare v0.2.0 release